update page search

--- a/project_1/src/main/resources/messages_en.properties
+++ b/project_1/src/main/resources/messages_en.properties
@@ -1,4 +1,3 @@
-
 label.login=Login
 label.index=Home
 label.shop=List of product
@@ -18,20 +17,15 @@ label.cart=My Cart
 label.view.cart=View cart
 label.total=Total
 label.add.cart=Add to cart
-
 # checkout
 label.checkout=Payment
-
 # search
 label.search.placeholder=Search entire store here...
-
-
 # our company
 label.our.company=our company
 lable.contact.us=Contact us
 label.stores=Stores
 label.my.account=My account
-
 # product
 label.our.product=Our products
 label.our.product.message=Browse the collection of our best selling and top interresting products. <br>ll definitely find what you are looking for.
@@ -40,41 +34,45 @@ label.about.us=About us
 label.price.drop=Prices drop 
 label.new.product=New products
 label.best.sales=Best sales
-
 # Your Account
 label.your.account=Your account
 label.address=Address
 label.credit=Credit slips
 label.order=Orders
 label.personal.info=Personal info
-
 # store info
 label.store.info=Store information
 label.my.company=My company
-
 # login message
 label.login.error.messages=Your account or password incorrect
 label.lost.password=Lost your password?
 label.with.facebook=Login with Facebook
 label.with.google=Login with Google
-
 label.title.featured=FEATURED
-
-
-
 label.send.eamil=Send email
 label.signup.newsletter=SIGN UP FOR SEND NEWSLETTER
 label.title.newsletter=You can be always up to date with our new!
 label.enter.email=Enter your email address
 label.new=New
-
 # http error code
-error.400 = Http Error Code: 400. Bad Request
-error.401 = Http Error Code: 401. Unauthorized
-error.404 = Http Error Code: 404. Resource not found
-error.500 = Http Error Code: 500. Internal Server Error
-
-
+error.400=Http Error Code: 400. Bad Request
+error.401=Http Error Code: 401. Unauthorized
+error.404=Http Error Code: 404. Resource not found
+error.500=Http Error Code: 500. Internal Server Error
 # notification
 message.error=error!
 message.success=success!
+label.random=random
+label.search.in.list=Search in list
+add.to.cart=add to cart
+label.in.stock=In Stock
+label.free.ship.item=Free shipping item
+label.for.free.ship.item=For all orders over $100
+label.title.memory.back=Money back guarantee
+label.memory.back=100% money back guarantee
+label.title.cash.delivery=Cash on delivery
+label.title.help.support=Help & Support
+label.help.support.call=Call us : + 0123.4567.89
+label.remember=Remember me 
+label.password=Passwords
+label.username.or.email=Username or email
