--- a/project_1/src/main/resources/messages_vi.properties
+++ b/project_1/src/main/resources/messages_vi.properties
@@ -1,4 +1,3 @@
-
 label.login=Đăng nhập
 label.index=Trang chủ
 label.shop=Danh sách sản phẩm
@@ -18,20 +17,15 @@ label.cart=Giỏ hàng
 label.view.cart=Xem giỏ hàng
 label.total=Tổng
 label.add.cart=Thêm vào giỏ hàng
-
 # checkout
 label.checkout=Thanh toán
-
 # search
 label.search.placeholder=Tìm kiếm sản phẩm ở đây...
-
-
 # our company
 label.our.company=Công ty của chúng tôi
 lable.contact.us=Liên hệ chúng tôi
 label.stores=Danh sách cửa hàng
 label.my.account=Tài khoản của tôi
-
 # product
 label.our.product=Sản phẩm của chúng tôi
 label.our.product.message=Duyệt bộ sưu tập các sản phẩm bán chạy nhất và hàng đầu của chúng tôi. <br>chắc chắn sẽ tìm thấy những gì bạn đang tìm kiếm.
@@ -40,35 +34,42 @@ label.about.us=Về chúng tôi
 label.price.drop=Sản phẩm giảm giá
 label.new.product=Sản phẩm mới
 label.best.sales=Sản phẩm bán chạy nhất
-
 # Your Account
 label.your.account=Tài khoản của tôi
 label.address=Địa chỉ
 label.credit=Credit slips
 label.order=Đơn hàng
 label.personal.info=Thông tin cá nhân
-
 # store info
 label.store.info=Thông tin của hàng
 label.my.company=Công ty
-
 # login message
 label.login.error.messages=Tài khoản hoặc mật khẩu của bạn không chính xác
 label.lost.password=Quên mật khẩu
 label.with.facebook=Đăng nhập với Facebook
 label.with.google=Đăng nhập với Google
-
 label.title.featured=ĐẶC SẮC
-
-
 label.send.eamil=Gửi email
 label.signup.newsletter=Đăng ký gửi bản tin
 label.title.newsletter=Bạn luôn có thể cập nhật thông tin mới của chúng tôi!
 label.enter.email=Nhậm địa chỉ email của bạn
 label.new=Mới
-
 # http error code
-error.400 = Http Error Code: 400. Bad Request
-error.401 = Http Error Code: 401. Unauthorized
-error.404 = Http Error Code: 404. Resource not found
-error.500 = Http Error Code: 500. Internal Server Error
+error.400=Http Error Code: 400. Bad Request
+error.401=Http Error Code: 401. Unauthorized
+error.404=Http Error Code: 404. Resource not found
+error.500=Http Error Code: 500. Internal Server Error
+label.random=Ngẫu nhiên
+label.search.in.list=Tìm kiếm trong danh sách
+add.to.cart=Thêm vào giỏ hàng
+label.in.stock=Còn trong kho
+label.free.ship.item=Giao hàng miễn phí
+label.for.free.ship.item=Cho tất cả đơn hàng trên $100
+label.title.memory.back=Hoàn lại tiền
+label.memory.back=Đảm bảo hoàn tiền 100%
+label.title.cash.delivery=Thanh toán khi giao hàng
+label.title.help.support=Hỗ trợ
+label.help.support.call=Gọi chúng tôi : + 0123.4567.89
+label.remember=Ghi nhớ tài khoản mật khẩu
+label.password=Mật khẩu
+label.username.or.email=Tên đăng nhập hoặc Email
