layout admin author

--- a/project_1/src/main/resources/messages_en.properties
+++ b/project_1/src/main/resources/messages_en.properties
@@ -17,6 +17,7 @@ label.sales=Sale off
 label.cart=My Cart
 label.view.cart=View cart
 label.total=Total
+label.add.cart=Add to cart
 
 # checkout
 label.checkout=Payment
@@ -32,6 +33,8 @@ label.stores=Stores
 label.my.account=My account
 
 # product
+label.our.product=Our products
+label.our.product.message=Browse the collection of our best selling and top interresting products. <br>ll definitely find what you are looking for.
 label.product=Products
 label.about.us=About us
 label.price.drop=Prices drop 
@@ -51,5 +54,18 @@ label.my.company=My company
 
 # login message
 label.login.error.messages=Your account or password incorrect
+label.lost.password=Lost your password?
+label.with.facebook=Login with Facebook
+label.with.google=Login with Google
+
+label.title.featured=FEATURED
+
+
+
+label.send.eamil=Send email
+label.signup.newsletter=SIGN UP FOR SEND NEWSLETTER
+label.title.newsletter=You can be always up to date with our new!
+label.enter.email=Enter your email address
+label.new=New
 
 
