--- a/project_1/src/main/resources/messages_vi.properties
+++ b/project_1/src/main/resources/messages_vi.properties
@@ -17,6 +17,7 @@ label.sales=Sale off
 label.cart=Giỏ hàng
 label.view.cart=Xem giỏ hàng
 label.total=Tổng
+label.add.cart=Thêm vào giỏ hàng
 
 # checkout
 label.checkout=Thanh toán
@@ -32,6 +33,8 @@ label.stores=Danh sách cửa hàng
 label.my.account=Tài khoản của tôi
 
 # product
+label.our.product=Sản phẩm của chúng tôi
+label.our.product.message=Duyệt bộ sưu tập các sản phẩm bán chạy nhất và hàng đầu của chúng tôi. <br>chắc chắn sẽ tìm thấy những gì bạn đang tìm kiếm.
 label.product=Sản phẩm
 label.about.us=Về chúng tôi
 label.price.drop=Sản phẩm giảm giá
@@ -51,8 +54,15 @@ label.my.company=Công ty
 
 # login message
 label.login.error.messages=Tài khoản hoặc mật khẩu của bạn không chính xác
+label.lost.password=Quên mật khẩu
+label.with.facebook=Đăng nhập với Facebook
+label.with.google=Đăng nhập với Google
+
+label.title.featured=ĐẶC SẮC
 
 
-
-
-
+label.send.eamil=Gửi email
+label.signup.newsletter=Đăng ký gửi bản tin
+label.title.newsletter=Bạn luôn có thể cập nhật thông tin mới của chúng tôi!
+label.enter.email=Nhậm địa chỉ email của bạn
+label.new=Mới
