paying online with paypal

--- a/project_1/src/main/resources/messages_en.properties
+++ b/project_1/src/main/resources/messages_en.properties
@@ -73,3 +73,8 @@ error.400 = Http Error Code: 400. Bad Request
 error.401 = Http Error Code: 401. Unauthorized
 error.404 = Http Error Code: 404. Resource not found
 error.500 = Http Error Code: 500. Internal Server Error
+
+
+# notification
+message.error=error!
+message.success=success!
