add and show cart detail

--- a/project_1/src/main/resources/messages_en.properties
+++ b/project_1/src/main/resources/messages_en.properties
@@ -68,4 +68,8 @@ label.title.newsletter=You can be always up to date with our new!
 label.enter.email=Enter your email address
 label.new=New
 
-
+# http error code
+error.400 = Http Error Code: 400. Bad Request
+error.401 = Http Error Code: 401. Unauthorized
+error.404 = Http Error Code: 404. Resource not found
+error.500 = Http Error Code: 500. Internal Server Error
