--- a/project_1/src/main/resources/messages_vi.properties
+++ b/project_1/src/main/resources/messages_vi.properties
@@ -66,3 +66,9 @@ label.signup.newsletter=Đăng ký gửi bản tin
 label.title.newsletter=Bạn luôn có thể cập nhật thông tin mới của chúng tôi!
 label.enter.email=Nhậm địa chỉ email của bạn
 label.new=Mới
+
+# http error code
+error.400 = Http Error Code: 400. Bad Request
+error.401 = Http Error Code: 401. Unauthorized
+error.404 = Http Error Code: 404. Resource not found
+error.500 = Http Error Code: 500. Internal Server Error
