update a few in page search

--- a/project_1/src/main/resources/messages_en.properties
+++ b/project_1/src/main/resources/messages_en.properties
@@ -80,3 +80,9 @@ label.password=Passwords
 label.username.or.email=Username or email
 label.best.sale=BEST SALE OF THE DAY
 label.shop.now=Shop now!
+label.producers=PRODUCERS
+label.categories=Categories
+label.price=Price
+label.shopping.option=SHOPPING OPTIONS
+label.not.found.book=No books were found
+label.search=Search
