--- a/project_1/src/main/resources/messages_vi.properties
+++ b/project_1/src/main/resources/messages_vi.properties
@@ -77,5 +77,10 @@ label.password=Mật khẩu
 label.username.or.email=Tên đăng nhập hoặc Email
 label.best.sale=SẢN PHẨM BÁN CHẠY TRONG NGÀY
 label.shop.now=Mua ngay!
-
+label.producers=Nhà suất bản
+label.categories=Thể loại
+label.price=Giá
+label.shopping.option=Tùy chọn
+label.not.found.book=Không tìm thấy quấn sách nào
+label.search=Tìm kiếm
 
