update client index

--- a/project_1/src/main/resources/messages_en.properties
+++ b/project_1/src/main/resources/messages_en.properties
@@ -59,6 +59,8 @@ error.400=Http Error Code: 400. Bad Request
 error.401=Http Error Code: 401. Unauthorized
 error.404=Http Error Code: 404. Resource not found
 error.500=Http Error Code: 500. Internal Server Error
+error.403=Http Error Code: 403. Forbidden
+error.415=Http Error Code: 415. Unsupported Media Type
 # notification
 message.error=error!
 message.success=success!
@@ -76,3 +78,5 @@ label.help.support.call=Call us : + 0123.4567.89
 label.remember=Remember me 
 label.password=Passwords
 label.username.or.email=Username or email
+label.best.sale=BEST SALE OF THE DAY
+label.shop.now=Shop now!
