--- a/project_1/src/main/resources/messages_vi.properties
+++ b/project_1/src/main/resources/messages_vi.properties
@@ -59,6 +59,8 @@ error.400=Http Error Code: 400. Bad Request
 error.401=Http Error Code: 401. Unauthorized
 error.404=Http Error Code: 404. Resource not found
 error.500=Http Error Code: 500. Internal Server Error
+error.403=Http Error Code: 403. Forbidden
+error.415=Http Error Code: 415. Unsupported Media Type
 label.random=Ngẫu nhiên
 label.search.in.list=Tìm kiếm trong danh sách
 add.to.cart=Thêm vào giỏ hàng
@@ -73,4 +75,7 @@ label.help.support.call=Gọi chúng tôi : + 0123.4567.89
 label.remember=Ghi nhớ tài khoản mật khẩu
 label.password=Mật khẩu
 label.username.or.email=Tên đăng nhập hoặc Email
+label.best.sale=SẢN PHẨM BÁN CHẠY TRONG NGÀY
+label.shop.now=Mua ngay!
+
 
