--- a/project_1/src/main/resources/messages_en.properties
+++ b/project_1/src/main/resources/messages_en.properties
@@ -86,3 +86,4 @@ label.price=Price
 label.shopping.option=SHOPPING OPTIONS
 label.not.found.book=No books were found
 label.search=Search
+label.relate.book=Related products 
