--- a/project_1/src/main/resources/messages_vi.properties
+++ b/project_1/src/main/resources/messages_vi.properties
@@ -83,4 +83,5 @@ label.price=Giá
 label.shopping.option=Tùy chọn
 label.not.found.book=Không tìm thấy quấn sách nào
 label.search=Tìm kiếm
+label.relate.book=Sách liên quan
 
